BE-6: api for getting friend requests